[package]
name = "kholles_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
comrak = "0.39.0"
gray_matter = "0.2.8"
hex = "0.4.3"
hmac = "0.12.1"
html-escape = "0.2.13"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = "1.0.217"
serde_json = "1.0.139"
serde_yaml = "0.9.34"
sha2 = "0.10.8"

[debug]
template_dir = "static/templates"

[release]
template_dir = "static/templates"
